JavaForBeginners/gen/JavaForBeginnersParser.java
// Generated from C:/Users/Nyuu-PC/Desktop/newnew/JavaForBeginners\JavaForBeginners.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaForBeginnersParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, DATATYPE=12, INT=13, FLOAT=14, BOOLEAN=15, STRING=16, 
		VAR_NAME=17, COMMENT=18, SPACE=19, ASSIGN=20, SEMICOLON=21, GREATERTHAN=22, 
		SMALLERTHAN=23, GREATEROREQUALS=24, SMALLEROREQUALS=25, EQUALS=26, NOTEQUALS=27, 
		AND=28, OR=29, NOT=30, ABSOLUTE=31, EXTREME=32, PLUS=33, MINUS=34, MULTIPLY=35, 
		DIVIDE=36, ADDASSIGN=37, MINUSASSIGN=38, MULTIPLYASSIGN=39, DIVIDEASSIGN=40, 
		MODULUS=41, PLUSPLUS=42, MINMIN=43, OPEN_FUNC_OR_COND=44, CLOSE_FUNC_OR_COND=45, 
		RETURN=46;
	public static final int
		RULE_parse = 0, RULE_code_block = 1, RULE_statement = 2, RULE_declare = 3, 
		RULE_assign_value = 4, RULE_assign_value_by_method = 5, RULE_operator = 6, 
		RULE_operator_with_method = 7, RULE_read_statement = 8, RULE_print_to_console = 9, 
		RULE_if_statement = 10, RULE_while_statement = 11, RULE_for_statement = 12, 
		RULE_condition_block = 13, RULE_function_block = 14, RULE_function = 15, 
		RULE_call_function = 16, RULE_function_execution = 17, RULE_argument = 18, 
		RULE_argument_execution = 19, RULE_argument_type = 20, RULE_variable_expression = 21, 
		RULE_boolean_expression = 22, RULE_atom = 23;
	public static final String[] ruleNames = {
		"parse", "code_block", "statement", "declare", "assign_value", "assign_value_by_method", 
		"operator", "operator_with_method", "read_statement", "print_to_console", 
		"if_statement", "while_statement", "for_statement", "condition_block", 
		"function_block", "function", "call_function", "function_execution", "argument", 
		"argument_execution", "argument_type", "variable_expression", "boolean_expression", 
		"atom"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'read_user_input_of_type('", "'display_this('", "'if_this_is_true'", 
		"'else_if_this_is_true'", "'else_if_it_is_false'", "'while_this_is_true'", 
		"'for_this_duration'", "'{'", "'}'", "'function'", "','", null, null, 
		null, null, null, null, null, null, "'='", "';'", "'>'", "'<'", "'>='", 
		"'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'|'", "'$'", "'+'", "'-'", 
		"'*'", "'/'", null, null, null, null, "'%'", "'++'", "'--'", "'('", "')'", 
		"'give_this_back'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"DATATYPE", "INT", "FLOAT", "BOOLEAN", "STRING", "VAR_NAME", "COMMENT", 
		"SPACE", "ASSIGN", "SEMICOLON", "GREATERTHAN", "SMALLERTHAN", "GREATEROREQUALS", 
		"SMALLEROREQUALS", "EQUALS", "NOTEQUALS", "AND", "OR", "NOT", "ABSOLUTE", 
		"EXTREME", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "ADDASSIGN", "MINUSASSIGN", 
		"MULTIPLYASSIGN", "DIVIDEASSIGN", "MODULUS", "PLUSPLUS", "MINMIN", "OPEN_FUNC_OR_COND", 
		"CLOSE_FUNC_OR_COND", "RETURN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaForBeginners.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaForBeginnersParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavaForBeginnersParser.EOF, 0); }
		public List<Function_executionContext> function_execution() {
			return getRuleContexts(Function_executionContext.class);
		}
		public Function_executionContext function_execution(int i) {
			return getRuleContext(Function_executionContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(48);
					function_execution();
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(54);
			code_block();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_blockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterCode_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitCode_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitCode_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(57);
					statement();
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Read_statementContext read_statement() {
			return getRuleContext(Read_statementContext.class,0);
		}
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public Print_to_consoleContext print_to_console() {
			return getRuleContext(Print_to_consoleContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public Assign_valueContext assign_value() {
			return getRuleContext(Assign_valueContext.class,0);
		}
		public Assign_value_by_methodContext assign_value_by_method() {
			return getRuleContext(Assign_value_by_methodContext.class,0);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public Operator_with_methodContext operator_with_method() {
			return getRuleContext(Operator_with_methodContext.class,0);
		}
		public Variable_expressionContext variable_expression() {
			return getRuleContext(Variable_expressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JavaForBeginnersParser.SEMICOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				read_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				declare();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				print_to_console();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				if_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				for_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				while_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				call_function();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(70);
				assign_value();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(71);
				assign_value_by_method();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(72);
				operator();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(73);
				operator_with_method();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(74);
				variable_expression(0);
				setState(75);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareContext extends ParserRuleContext {
		public TerminalNode DATATYPE() { return getToken(JavaForBeginnersParser.DATATYPE, 0); }
		public TerminalNode VAR_NAME() { return getToken(JavaForBeginnersParser.VAR_NAME, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaForBeginnersParser.SEMICOLON, 0); }
		public DeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareContext declare() throws RecognitionException {
		DeclareContext _localctx = new DeclareContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(DATATYPE);
			setState(80);
			match(VAR_NAME);
			setState(81);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_valueContext extends ParserRuleContext {
		public Variable_expressionContext Expression;
		public TerminalNode DATATYPE() { return getToken(JavaForBeginnersParser.DATATYPE, 0); }
		public TerminalNode VAR_NAME() { return getToken(JavaForBeginnersParser.VAR_NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(JavaForBeginnersParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaForBeginnersParser.SEMICOLON, 0); }
		public Variable_expressionContext variable_expression() {
			return getRuleContext(Variable_expressionContext.class,0);
		}
		public Assign_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterAssign_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitAssign_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitAssign_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_valueContext assign_value() throws RecognitionException {
		Assign_valueContext _localctx = new Assign_valueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(DATATYPE);
			setState(84);
			match(VAR_NAME);
			setState(85);
			match(ASSIGN);
			setState(86);
			((Assign_valueContext)_localctx).Expression = variable_expression(0);
			setState(87);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_value_by_methodContext extends ParserRuleContext {
		public Call_functionContext Expression;
		public TerminalNode DATATYPE() { return getToken(JavaForBeginnersParser.DATATYPE, 0); }
		public TerminalNode VAR_NAME() { return getToken(JavaForBeginnersParser.VAR_NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(JavaForBeginnersParser.ASSIGN, 0); }
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public Assign_value_by_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_value_by_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterAssign_value_by_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitAssign_value_by_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitAssign_value_by_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_value_by_methodContext assign_value_by_method() throws RecognitionException {
		Assign_value_by_methodContext _localctx = new Assign_value_by_methodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assign_value_by_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(DATATYPE);
			setState(90);
			match(VAR_NAME);
			setState(91);
			match(ASSIGN);
			setState(92);
			((Assign_value_by_methodContext)_localctx).Expression = call_function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public Token id;
		public Variable_expressionContext Expression;
		public TerminalNode ASSIGN() { return getToken(JavaForBeginnersParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaForBeginnersParser.SEMICOLON, 0); }
		public TerminalNode VAR_NAME() { return getToken(JavaForBeginnersParser.VAR_NAME, 0); }
		public Variable_expressionContext variable_expression() {
			return getRuleContext(Variable_expressionContext.class,0);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			((OperatorContext)_localctx).id = match(VAR_NAME);
			setState(95);
			match(ASSIGN);
			setState(96);
			((OperatorContext)_localctx).Expression = variable_expression(0);
			setState(97);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_with_methodContext extends ParserRuleContext {
		public Token id;
		public Call_functionContext Expression;
		public TerminalNode ASSIGN() { return getToken(JavaForBeginnersParser.ASSIGN, 0); }
		public TerminalNode VAR_NAME() { return getToken(JavaForBeginnersParser.VAR_NAME, 0); }
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public Operator_with_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_with_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterOperator_with_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitOperator_with_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitOperator_with_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operator_with_methodContext operator_with_method() throws RecognitionException {
		Operator_with_methodContext _localctx = new Operator_with_methodContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operator_with_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((Operator_with_methodContext)_localctx).id = match(VAR_NAME);
			setState(100);
			match(ASSIGN);
			setState(101);
			((Operator_with_methodContext)_localctx).Expression = call_function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_statementContext extends ParserRuleContext {
		public TerminalNode VAR_NAME() { return getToken(JavaForBeginnersParser.VAR_NAME, 0); }
		public TerminalNode DATATYPE() { return getToken(JavaForBeginnersParser.DATATYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaForBeginnersParser.SEMICOLON, 0); }
		public Read_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).enterRead_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaForBeginnersListener ) ((JavaForBeginnersListener)listener).exitRead_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaForBeginnersVisitor ) return ((JavaForBeginnersVisitor<? extends T>)visitor).visitRead_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Read_statementContext read_statement() throws RecognitionException {
		Read_statementContext _localctx = new Read_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_read_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(VAR_NAME);
			setState(104);
			match(T__0);
			setState(105);
			match(DATATYPE);
			setState(106);
			match(CLOSE_FUNC_OR_COND);
			setState(107);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
